--- a/_posts/2020-1-1-Honors-2020.md
+++ b/_posts/2020-1-1-Honors-2020.md
@@ -9,5 +9,6 @@ catalog: true                       # 是否归档
 tags:                               #标签
     - honors
 ---
-First Prize of Jilin Province Mathematical Modeling Competition                               2019
+First Prize of Jilin Province Mathematical Modeling Competition                      2019
+![award](img/model2.jpg)
 First prize of Northeast Division of Mobile Application Innovation Competition       2019
